--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -54,7 +54,9 @@ found in the LICENSE file.
   }
 </style>
 <script src="base.js"></script>
-<script src="unittest.js"></script>
+<script>
+  base.require('unittest');
+</script>
 </head>
 <body>
   <h1>Trace-Viewer Tests</h3>
