--- a/trunk/src/interactive_tests.html
+++ b/trunk/src/interactive_tests.html
@@ -38,9 +38,8 @@ found in the LICENSE file.
   </div>
 
   <script>
-  base.defineModule('interactive_tests')
-      .dependsOn('timeline_view', 'test_utils')
-      .runWhenLoaded(onLoad);
+  base.require('timeline_view');
+  base.require('test_utils');
 
   function load(parentEl) {
     var src = parentEl.getAttribute('src');
@@ -86,6 +85,7 @@ found in the LICENSE file.
     Array.prototype.forEach.call(document.querySelectorAll('.timeline-test'),
                                  load);
   }
+  document.addEventListener('DOMContentLoaded', onLoad);
 
   window.addEventListener('hashchange', onLoad);
   </script>
