--- a/trunk/src/timeline_cpu_test.html
+++ b/trunk/src/timeline_cpu_test.html
@@ -8,29 +8,27 @@ found in the LICENSE file.
 <head>
 <title>TimelineCpu tests</title>
 <script src="base.js"></script>
+<script>
+  base.require('unittest');
+  base.require('test_utils');
+  base.require('timeline_cpu');
+</script>
 </head>
 <body>
 <script>
-'use strict';
-
-base.defineModule('timeline_cpu_test')
-    .dependsOn('unittest',
-               'test_utils',
-               'timeline_cpu')
-    .runAllTests(function() {
+  'use strict';
 
   var TimelineCpu = tracing.TimelineCpu;
   var TimelineSlice = tracing.TimelineSlice;
-  var tests = {};
 
-  tests.testCpuBounds_Empty = function() {
+  function testCpuBounds_Empty() {
     var cpu = new TimelineCpu(undefined, 1);
     cpu.updateBounds();
     assertEquals(undefined, cpu.minTimestamp);
     assertEquals(undefined, cpu.maxTimestamp);
   }
 
-  tests.testCpuBounds_OneSlice = function() {
+  function testCpuBounds_OneSlice() {
     var cpu = new TimelineCpu(undefined, 1);
     cpu.slices.push(test_utils.newSlice(1, 3));
     cpu.updateBounds();
@@ -38,14 +36,14 @@ base.defineModule('timeline_cpu_test')
     assertEquals(4, cpu.maxTimestamp);
   }
 
-  tests.testGetOrCreateCounter = function() {
+  function testGetOrCreateCounter() {
     var cpu = new TimelineCpu(undefined, 1);
     var ctrBar = cpu.getOrCreateCounter('foo', 'bar');
     var ctrBar2 = cpu.getOrCreateCounter('foo', 'bar');
     assertEquals(ctrBar2, ctrBar);
   }
 
-  tests.testShiftTimestampsForward = function() {
+  function testShiftTimestampsForward() {
     var cpu = new TimelineCpu(undefined, 1);
     var ctr = cpu.getOrCreateCounter('foo', 'bar');
     cpu.slices.push(test_utils.newSlice(1, 3));
@@ -59,8 +57,6 @@ base.defineModule('timeline_cpu_test')
     assertEquals(shiftCount, 1);
     assertEquals(1.32, cpu.slices[0].start);
   }
-  return tests;
-});
 </script>
 </body>
 </html>
