--- a/trunk/src/timeline_model_test.html
+++ b/trunk/src/timeline_model_test.html
@@ -7,7 +7,6 @@ found in the LICENSE file.
 -->
 <head>
 <title>TimelineModel tests</title>
-<script src="base.js"></script>
 <style>
   .timeline-view {
     border: 1px solid black;
@@ -18,18 +17,16 @@ found in the LICENSE file.
     margin: 10px;
   }
 </style>
+<script src="base.js"></script>
+<script>
+  base.require('unittest');
+  base.require('test_utils');
+  base.require('timeline_model');
+</script>
 </head>
 <body>
 <script>
 'use strict';
-
-base.defineModule('timeline_model_test')
-    .dependsOn('unittest',
-               'test_utils',
-               'timeline_model')
-    .runAllTests(function() {
-
-var tests = {};
 
 var TimelineSlice = tracing.TimelineSlice;
 var TimelineThreadSlice = tracing.TimelineThreadSlice;
@@ -64,14 +61,14 @@ var createModelWithOneOfEverything = function() {
   return m;
 }
 
-tests.testModelBounds_EmptyModel = function() {
+function testModelBounds_EmptyModel() {
   var m = new TimelineModel();
   m.updateBounds();
   assertEquals(undefined, m.minTimestamp);
   assertEquals(undefined, m.maxTimestamp);
 }
 
-tests.testModelBounds_OneEmptyThread = function() {
+function testModelBounds_OneEmptyThread() {
   var m = new TimelineModel();
   var t = m.getOrCreateProcess(1).getOrCreateThread(1);
   m.updateBounds();
@@ -79,7 +76,7 @@ tests.testModelBounds_OneEmptyThread = function() {
   assertEquals(undefined, m.maxTimestamp);
 }
 
-tests.testModelBounds_OneThread = function() {
+function testModelBounds_OneThread() {
   var m = new TimelineModel();
   var t = m.getOrCreateProcess(1).getOrCreateThread(1);
   t.pushSlice(new TimelineThreadSlice('', 'a', 0, 1, {}, 3));
@@ -88,7 +85,7 @@ tests.testModelBounds_OneThread = function() {
   assertEquals(4, m.maxTimestamp);
 }
 
-tests.testModelBounds_OneThreadAndOneEmptyThread = function() {
+function testModelBounds_OneThreadAndOneEmptyThread() {
   var m = new TimelineModel();
   var t1 = m.getOrCreateProcess(1).getOrCreateThread(1);
   t1.pushSlice(new TimelineThreadSlice('', 'a', 0, 1, {}, 3));
@@ -98,7 +95,7 @@ tests.testModelBounds_OneThreadAndOneEmptyThread = function() {
   assertEquals(4, m.maxTimestamp);
 }
 
-tests.testModelBounds_OneCpu = function() {
+function testModelBounds_OneCpu() {
   var m = new TimelineModel();
   var cpu = m.getOrCreateCpu(1);
   cpu.slices.push(test_utils.newSlice(1, 3));
@@ -108,7 +105,7 @@ tests.testModelBounds_OneCpu = function() {
 }
 
 
-tests.testModelBounds_OneCpuOneThread = function() {
+function testModelBounds_OneCpuOneThread() {
   var m = new TimelineModel();
   var cpu = m.getOrCreateCpu(1);
   cpu.slices.push(test_utils.newSlice(1, 3));
@@ -121,13 +118,13 @@ tests.testModelBounds_OneCpuOneThread = function() {
   assertEquals(5, m.maxTimestamp);
 }
 
-tests.testModelCanImportEmpty = function() {
+function testModelCanImportEmpty() {
   var m;
   m = new TimelineModel([]);
   m = new TimelineModel('');
 }
 
-tests.testTimelineTitleFilter = function() {
+function testTimelineTitleFilter() {
   var s0 = test_utils.newSlice(1, 3);
   assertFalse(new TimelineTitleFilter('').matchSlice(s0));
 
@@ -140,12 +137,12 @@ tests.testTimelineTitleFilter = function() {
   assertFalse(new TimelineTitleFilter('x').matchSlice(s1));
 }
 
-tests.testTimelineModel_toJSON = function() {
+function testTimelineModel_toJSON() {
   var m = createModelWithOneOfEverything();
   assertNotNull(JSON.stringify(m));
 }
 
-tests.testTimelineModel_findAllThreadsNamed = function() {
+function testTimelineModel_findAllThreadsNamed() {
   var m = new TimelineModel();
   var t = m.getOrCreateProcess(1).getOrCreateThread(1);
   t.name = 'CrBrowserMain';
@@ -157,7 +154,7 @@ tests.testTimelineModel_findAllThreadsNamed = function() {
   assertEquals(0, f.length);
 }
 
-tests.testTimelineModel_updateCategories = function() {
+function testTimelineModel_updateCategories() {
   var m = new TimelineModel();
   var t = m.getOrCreateProcess(1).getOrCreateThread(1);
   t.pushSlice(new TimelineThreadSlice('categoryA', 'a', 0, 1, {}, 3));
@@ -168,9 +165,6 @@ tests.testTimelineModel_updateCategories = function() {
   m.updateCategories_();
   assertArrayEquals(["categoryA", "categoryB"], m.categories);
 }
-
-  return tests;
-});
 </script>
 </body>
 </html>
