--- a/trunk/src/timeline_thread_test.html
+++ b/trunk/src/timeline_thread_test.html
@@ -8,18 +8,15 @@ found in the LICENSE file.
 <head>
 <title>TimelineThread tests</title>
 <script src="base.js"></script>
+<script>
+  base.require('unittest');
+  base.require('test_utils');
+  base.require('timeline_model');
+</script>
 </head>
 <body>
 <script>
-'use strict';
-
-base.defineModule('timeline_thread_test')
-    .dependsOn('unittest',
-               'test_utils',
-               'timeline_model')
-    .runAllTests(function() {
-
-  var tests = {};
+  'use strict';
 
   var TimelineThreadSlice = tracing.TimelineThreadSlice;
   var TimelineProcess = tracing.TimelineProcess;
@@ -28,18 +25,18 @@ base.defineModule('timeline_thread_test')
   var newAsyncSlice = test_utils.newAsyncSlice;
   var newAsyncSliceNamed = test_utils.newAsyncSliceNamed;
 
-  tests.testPTIDFromPidAndTid = function() {
+  function testPTIDFromPidAndTid() {
     assertEquals('1:2', TimelineThread.getPTIDFromPidAndTid(1, 2));
   }
 
-  tests.testThreadBounds_Empty = function() {
+  function testThreadBounds_Empty() {
     var t = new TimelineThread(new TimelineProcess(7), 1);
     t.updateBounds();
     assertEquals(undefined, t.minTimestamp);
     assertEquals(undefined, t.maxTimestamp);
   }
 
-  tests.testThreadBounds_SubRow = function() {
+  function testThreadBounds_SubRow() {
     var t = new TimelineThread(new TimelineProcess(7), 1);
     t.pushSlice(new TimelineThreadSlice('', 'a', 0, 1, {}, 3));
     t.updateBounds();
@@ -47,7 +44,7 @@ base.defineModule('timeline_thread_test')
     assertEquals(4, t.maxTimestamp);
   }
 
-  tests.testThreadBounds_AsyncSliceGroup = function() {
+  function testThreadBounds_AsyncSliceGroup() {
     var t = new TimelineThread(new TimelineProcess(7), 1);
     t.pushSlice(new TimelineThreadSlice('', 'a', 0, 1, {}, 3));
     t.asyncSlices.push(newAsyncSlice(0.1, 5, t, t));
@@ -56,7 +53,7 @@ base.defineModule('timeline_thread_test')
     assertEquals(5.1, t.maxTimestamp);
   }
 
-  tests.testThreadBounds_Cpu = function() {
+  function testThreadBounds_Cpu() {
     var t = new TimelineThread(new TimelineProcess(7), 1);
     t.cpuSlices = [newSliceNamed("x", 0, 1)];
     t.updateBounds();
@@ -64,7 +61,7 @@ base.defineModule('timeline_thread_test')
     assertEquals(1, t.maxTimestamp);
   }
 
-  tests.testShiftTimestampsForwardWithCpu = function() {
+  function testShiftTimestampsForwardWithCpu() {
     var t = new TimelineThread(new TimelineProcess(7), 1);
     t.pushSlice(new TimelineThreadSlice('', 'a', 0, 0, {}, 3));
     t.asyncSlices.push(newAsyncSlice(0, 5, t, t));
@@ -83,7 +80,7 @@ base.defineModule('timeline_thread_test')
     assertEquals(0.32, t.cpuSlices[0].start);
   }
 
-  tests.testShiftTimestampsForwardWithoutCpu = function() {
+  function testShiftTimestampsForwardWithoutCpu() {
     var t = new TimelineThread(new TimelineProcess(7), 1);
     t.pushSlice(new TimelineThreadSlice('', 'a', 0, 0, {}, 3));
     t.asyncSlices.push(newAsyncSlice(0, 5, t, t));
@@ -99,9 +96,6 @@ base.defineModule('timeline_thread_test')
     assertEquals(1, shiftCount);
     assertEquals(0.32, t.slices[0].start);
   }
-
-  return tests;
-});
 </script>
 </body>
 </html>
