--- a/trunk/src/tracks/timeline_slice_group_track_test.html
+++ b/trunk/src/tracks/timeline_slice_group_track_test.html
@@ -13,25 +13,22 @@ found in the LICENSE file.
 }
 </style>
 <script src="/src/base.js"></script>
+<script>
+  base.require('unittest');
+  base.require('test_utils');
+  base.require('timeline');
+  base.require('timeline_slice_group');
+</script>
 </head>
 <body>
 <script>
   'use strict';
-  base.defineModule('tracks.timeline_slice_group_track_test')
-      .dependsOn('tracks.timeline_slice_group_track',
-                 'timeline_slice_group',
-                 'unittest',
-                 'test_utils',
-                 'timeline' /* TODO(nduca): reduce dependency to tracks */)
-      .runAllTests(function() {
-
-  var tests = {};
 
   var TimelineSliceGroup = tracing.TimelineSliceGroup;
   var TimelineSliceGroupTrack = tracks.TimelineSliceGroupTrack;
   var newSliceNamed = test_utils.newSliceNamed;
 
-  tests.testSubRowBuilderBasic = function() {
+  function testSubRowBuilderBasic() {
     var group = new TimelineSliceGroup();
     var sA = group.pushSlice(newSliceNamed("a", 1, 2));
     var sB = group.pushSlice(newSliceNamed("a", 3, 1));
@@ -46,7 +43,7 @@ found in the LICENSE file.
     assertArrayEquals([sA, sB], subRows[0]);
   }
 
-  tests.testSubRowBuilderBasic2 = function() {
+  function testSubRowBuilderBasic2() {
     var group = new TimelineSliceGroup();
     var sA = group.pushSlice(newSliceNamed("a", 1, 4));
     var sB = group.pushSlice(newSliceNamed("b", 3, 1));
@@ -63,7 +60,7 @@ found in the LICENSE file.
     assertArrayEquals([sB], subRows[1]);
   }
 
-  tests.testSubRowBuilderNestedExactly = function() {
+  function testSubRowBuilderNestedExactly() {
     var group = new TimelineSliceGroup();
     var sA = group.pushSlice(newSliceNamed("a", 1, 4));
     var sB = group.pushSlice(newSliceNamed("b", 1, 4));
@@ -80,7 +77,7 @@ found in the LICENSE file.
     assertArrayEquals([sB], subRows[1]);
   }
 
-  tests.testSubRowBuilderInstantEvents = function() {
+  function testSubRowBuilderInstantEvents() {
     var group = new TimelineSliceGroup();
     var sA = group.pushSlice(newSliceNamed("a", 1, 0));
     var sB = group.pushSlice(newSliceNamed("b", 2, 0));
@@ -95,7 +92,7 @@ found in the LICENSE file.
     assertArrayEquals([sA, sB], subRows[0]);
   }
 
-  tests.testSubRowBuilderTwoInstantEvents = function() {
+  function testSubRowBuilderTwoInstantEvents() {
     var group = new TimelineSliceGroup();
     var sA = group.pushSlice(newSliceNamed("a", 1, 0));
     var sB = group.pushSlice(newSliceNamed("b", 1, 0));
@@ -110,7 +107,7 @@ found in the LICENSE file.
     assertArrayEquals([sB], subRows[1]);
   }
 
-  tests.testSubRowBuilderOutOfOrderAddition = function() {
+  function testSubRowBuilderOutOfOrderAddition() {
     var group = new TimelineSliceGroup();
 
     // Pattern being tested:
@@ -130,7 +127,7 @@ found in the LICENSE file.
   }
 
 
-  tests.testSubRowBuilderOutOfOrderAddition2 = function() {
+  function testSubRowBuilderOutOfOrderAddition2() {
     var group = new TimelineSliceGroup();
 
     // Pattern being tested:
@@ -152,7 +149,7 @@ found in the LICENSE file.
     assertArrayEquals([sB], subRows[1]);
   }
 
-  tests.testSubRowBuilderOnNestedZeroLength = function() {
+  function testSubRowBuilderOnNestedZeroLength() {
     var group = new TimelineSliceGroup();
 
     // Pattern being tested:
@@ -172,7 +169,7 @@ found in the LICENSE file.
     assertArrayEquals([sB1, sB2], subRows[1]);
   }
 
-  tests.testSubRowBuilderOnGroup1 = function() {
+  function testSubRowBuilderOnGroup1() {
     var group = new TimelineSliceGroup();
 
     // Pattern being tested:
@@ -192,7 +189,7 @@ found in the LICENSE file.
     assertArrayEquals([sB], subRows[1]);
   }
 
-  tests.testSubRowBuilderOnGroup2 = function() {
+  function testSubRowBuilderOnGroup2() {
     var group = new TimelineSliceGroup();
 
     // Pattern being tested:
@@ -215,7 +212,7 @@ found in the LICENSE file.
     assertArrayEquals([sC], subRows[2]);
   }
 
-  tests.testTrackFiltering = function() {
+  function testTrackFiltering() {
     var group = new TimelineSliceGroup();
 
     var sA = group.pushSlice(newSliceNamed("a", 1, 3));
@@ -238,9 +235,6 @@ found in the LICENSE file.
     assertTrue(track.visible);
     assertEquals(1, track.subRows_.length);
   }
-
-  return tests;
-});
 </script>
 </body>
 </html>
