--- a/trunk/src/tracks/timeline_viewport_track_test.html
+++ b/trunk/src/tracks/timeline_viewport_track_test.html
@@ -13,23 +13,21 @@ found in the LICENSE file.
 }
 </style>
 <script src="/src/base.js"></script>
+<script>
+  base.require('unittest');
+  base.require('test_utils');
+  base.require('timeline_viewport');
+  base.require('tracks.timeline_viewport_track');
+</script>
 </head>
 <body>
 <script>
   'use strict';
-  base.defineModule('tracks.timeline_viewport_track_test')
-      .dependsOn('tracks.timeline_viewport_track',
-                 'unittest',
-                 'test_utils',
-                 'timeline' /* TODO(nduca): reduce dependency to tracks */)
-      .runAllTests(function() {
-
-  var tests = {};
 
   var TimelineViewport = tracing.TimelineViewport;
   var TimelineViewportTrack = tracks.TimelineViewportTrack;
 
-  tests.testViewport = function() {
+  function testViewport() {
     var testEl = this.addHTMLOutput();
 
     var track = TimelineViewportTrack();
@@ -38,9 +36,6 @@ found in the LICENSE file.
     track.viewport.setPanAndScale(0,
         track.clientWidth / 1000);
   }
-
-  return tests;
-});
 </script>
 </body>
 </html>
